fix(platform-manager): overflow control pannel

--- a/web/assets/css/platform_manager.css
+++ b/web/assets/css/platform_manager.css
@@ -38,7 +38,6 @@ h3 {
   width: auto;
   margin: 5px;
   display: flex;
-  height: 14vh;
 }
 
 .control_pannel fieldset {
